p2/shared/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
spec:
  selector:
    matchLabels:
      run: app1
  template:
    metadata:
      labels:
        run: app1
    spec:
      containers:
        - name: app1
          image: paulbouwer/hello-kubernetes:1
          ports:
            - containerPort: 8080
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: app1
  labels:
    run: app1
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: app1
