p2/shared/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
spec:
  selector:
    matchLabels:
      run: app2
  replicas: 3
  template:
    metadata:
      labels:
        run: app2
    spec:
      containers:
        - name: app2
          image: paulbouwer/hello-kubernetes:1
          ports:
            - containerPort: 8080
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: app2
  labels:
    run: app2
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: app2
