p2/shared/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment
spec:
  selector:
    matchLabels:
      run: app3
  template:
    metadata:
      labels:
        run: app3
    spec:
      containers:
        - name: app3
          image: paulbouwer/hello-kubernetes:1
          ports:
            - containerPort: 80
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: app-three
  labels:
    run: app3
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: app3
